--- a/Work-Timer/Work-Timer.csproj
+++ b/Work-Timer/Work-Timer.csproj
@@ -128,6 +128,9 @@
     <Compile Include="Components\Layout\FolderPanel.xaml.cs">
       <DependentUpon>FolderPanel.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Components\Layout\HistoryPanel.xaml.cs">
+      <DependentUpon>HistoryPanel.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -137,6 +140,8 @@
     <Compile Include="Models\Enums\LanguageName.cs" />
     <Compile Include="Models\Enums\Settings.cs" />
     <Compile Include="Models\UI\CustomResourceLoader.cs" />
+    <Compile Include="Models\UI\DateTimeConverter.cs" />
+    <Compile Include="Models\UI\SelectedColorConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -222,11 +227,19 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Components\Layout\HistoryPanel.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Template\Button.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Template\Converter.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -257,6 +270,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
       <Version>6.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.3</Version>
     </PackageReference>
     <PackageReference Include="Richasy.Controls.UWP">
       <Version>1.0.5</Version>
