1. 添加总工作时长设置，并进行UI调整 2. 添加Github开源地址

--- a/Work-Timer/Work-Timer.csproj
+++ b/Work-Timer/Work-Timer.csproj
@@ -144,6 +144,9 @@
     <Compile Include="Components\Layout\SettingPanel.xaml.cs">
       <DependentUpon>SettingPanel.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Components\Widget\WorkDurationBlock.xaml.cs">
+      <DependentUpon>WorkDurationBlock.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -256,6 +259,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Components\Widget\WorkDurationBlock.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -300,7 +307,7 @@
       <Version>12.0.3</Version>
     </PackageReference>
     <PackageReference Include="Richasy.Controls.UWP">
-      <Version>1.0.7</Version>
+      <Version>1.0.9</Version>
     </PackageReference>
     <PackageReference Include="Richasy.Font.UWP">
       <Version>1.0.7</Version>
